--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "intermediate-app-dev-backend",
   "version": "1.0.0",
   "description": "A backend to set and retrieve various statistics for users playing my UE5/Unity games",
-  "main": "index.js",
+  "main": "app.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  
   "keywords": [],
   "author": "",
   "license": "ISC",
