--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "1.0.0",
   "description": "A backend to set and retrieve various statistics for users playing my UE5/Unity games",
   "main": "app.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  
+  "type": "module",
   "keywords": [],
-  "author": "",
+  "author": "Devon Henderson",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.14.0",
+    "@prisma/migrate": "^5.14.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "nodemon": "^3.1.0",
     "prisma": "^5.14.0"
   }
 }
