--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "A backend to set and retrieve various statistics for users playing my UE5/Unity games",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "migrate": "npx prisma migrate dev",
+    "generate": "npx prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
